# jm-dev-tools

./: .editorconfig  .gitignore  .markdownlint.json  .markdownlintignore  .mega-linter.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .vale.ini  .yamllint.yml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PSScriptAnalyzerSettings.psd1  README.md  REUSE.toml  Taskfile.yml  biome.json  commitlint.config.mjs  cspell.json  eslint.config.js  main.py  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  project-words.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  invite-contributors.yml
.github/badges/: coverage.json
.github/config/: labeler.yml  labels.yml
.github/scripts/: add-labels.js  dependency-report.js  enable-auto-merge.js  issue-handler.js  labels-report.js  pr-automation.js
.github/workflows/: cd.yml  ci.yml  codacy.yml  codeql.yml  contributor-action.yml  dependabot-merge.yml  docs-deploy.yml  issue-managment.yml  labels-sync.yml  maintenance.yml  megalinter.yml  notify-release.yml  pr-automation.yml  push-analyze.yml  release-version.yml  scorecard.yml  stale-issues.yml  test.yml
docs/: api-reference.md  index.md
docs/.overrides/partials/: copyright.html
docs/en/: reference.md  security.md  shell.md
docs/en/about/: index.md
docs/en/community/: code_of_conduct.md
docs/en/developer-guide/: DEVGUIDE.md  branches_and_environments.md  devguidegeneration.md  index.md  invoke-devguidegeneration.md  project-analysis.md  project-structure.md  tasks.md
docs/en/getting-started/: index.md
docs/en/user-guide/: index.md
scripts/: Invoke-DevGuideGeneration.ps1  devguide-generator.sh
src/scripts/: Invoke-DevGuideGeneration.ps1  devguide-generator.sh
