[project]
dependencies    = []
description     = "Reusable Bash and PowerShell development and automation scripts."
license         = "EUPL-1.2"
name            = "jm-dev-tools"
readme          = "README.md"
requires-python = ">=3.12"
version         = "0.1.0"

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.23",
  "mkdocstrings-shell>=1.0.4",
  "pre-commit>=4.3.0",
  "shellman>=1.0.2",
]
