# SPDX-License-Identifier: EUPL-1.2
# SPDX-FileCopyrightText: 2025-present Jürgen Mülbert <juergen.muelbert@outlook.de>

# ----------------------------------------------------------------------
# Build System (PEP 517/621) - Obligatorisch für pyproject.toml
# ----------------------------------------------------------------------
[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

# ----------------------------------------------------------------------
# Project Metadata (PEP 621)
# ----------------------------------------------------------------------
[project]
name            = "jm-dev-tools"
version         = "0.1.0"
description     = "Reusable Bash and PowerShell development and automation scripts."
readme          = "README.md"
license         = "EUPL-1.2"
requires-python = ">=3.12"

# Das Projekt hat keine Laufzeit-Abhängigkeiten
dependencies = []

# ----------------------------------------------------------------------
# Optionale Abhängigkeiten für Entwicklung/Dokumentation (PEP 621 Standard)
# ----------------------------------------------------------------------
[project.optional-dependencies]
dev = [
  "mike>=2.1.3",
  "mkdocs>=1.6.1",
  "mkdocs-awesome-pages-plugin>=2.10.1",
  "mkdocs-git-revision-date-localized-plugin>=1.5.0",
  "mkdocs-glightbox>=0.5.2",
  "mkdocs-include-markdown-plugin>=7.2.0",
  "mkdocs-material[imaging]>=9.6.23",
  "mkdocs-section-index>=0.3.10",
  "mkdocs-static-i18n>=1.3.0",
  "mkdocs-typer2>=0.1.6",
  "mkdocstrings-shell>=1.0.4",
  "mkdocstrings[python]>=0.30.1",
  "pre-commit>=4.3.0",
  "shellman>=1.0.2",
]

[tool.uv.workspace]
members = [
    "test/test",
]
